outputs_20260330-104711-42a4e208/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:15:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\include/IfxEgtm_Pwm.h:111:5: error: unknown type name 'IfxEgtm_Pwm_FastShutoffConfig'
  111 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\include/IfxEgtm_Pwm.h:126:5: error: unknown type name 'IfxEgtm_Pwm_ToutMap'; did you mean 'IfxEgtm_Tom_ToutMap'?
  126 |     IfxEgtm_Pwm_ToutMap *pin;
      |     ^~~~~~~~~~~~~~~~~~~
      |     IfxEgtm_Tom_ToutMap
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\include/IfxEgtm_Pwm.h:127:5: error: unknown type name 'IfxEgtm_Pwm_ToutMap'; did you mean 'IfxEgtm_Tom_ToutMap'?
  127 |     IfxEgtm_Pwm_ToutMap *complementaryPin;
      |     ^~~~~~~~~~~~~~~~~~~
      |     IfxEgtm_Tom_ToutMap
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\include/IfxEgtm_Pwm.h:233:5: error: unknown type name 'IfxEgtm_Pwm_ToutMap'; did you mean 'IfxEgtm_Tom_ToutMap'?
  233 |     IfxEgtm_Pwm_ToutMap *outputPin;
      |     ^~~~~~~~~~~~~~~~~~~
      |     IfxEgtm_Tom_ToutMap
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c: In function 'interruptEgtmAtom':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:30:35: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P21'?
   30 | #define LED                      &MODULE_P03, 9
      |                                   ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:68:23: note: in expansion of macro 'LED'
   68 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:30:35: note: each undeclared identifier is reported only once for each function it appears in
   30 | #define LED                      &MODULE_P03, 9
      |                                   ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:68:23: note: in expansion of macro 'LED'
   68 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:97:37: error: assignment to 'int *' from incompatible pointer type 'IfxEgtm_Pwm_ToutMap *' [-Wincompatible-pointer-types]
   97 |     output[0].pin                   = (IfxEgtm_Pwm_ToutMap *)PHASE_V_HS;
      |                                     ^
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:98:37: error: assignment to 'int *' from incompatible pointer type 'IfxEgtm_Pwm_ToutMap *' [-Wincompatible-pointer-types]
   98 |     output[0].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_V_LS;
      |                                     ^
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:105:37: error: assignment to 'int *' from incompatible pointer type 'IfxEgtm_Pwm_ToutMap *' [-Wincompatible-pointer-types]
  105 |     output[1].pin                   = (IfxEgtm_Pwm_ToutMap *)PHASE_U_HS;
      |                                     ^
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:45:24: error: 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT' undeclared (first use in this function)
   45 | #define PHASE_U_LS   (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT)    /* Validated */
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:106:62: note: in expansion of macro 'PHASE_U_LS'
  106 |     output[1].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_U_LS;
      |                                                              ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:113:37: error: assignment to 'int *' from incompatible pointer type 'IfxEgtm_Pwm_ToutMap *' [-Wincompatible-pointer-types]
  113 |     output[2].pin                   = (IfxEgtm_Pwm_ToutMap *)PHASE_W_HS;
      |                                     ^
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:114:37: error: assignment to 'int *' from incompatible pointer type 'IfxEgtm_Pwm_ToutMap *' [-Wincompatible-pointer-types]
  114 |     output[2].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_W_LS;
      |                                     ^
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:30:35: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P21'?
   30 | #define LED                      &MODULE_P03, 9
      |                                   ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\src\egtm_atom_3_phase_inverter_pwm.c:209:30: note: in expansion of macro 'LED'
  209 |     IfxPort_setPinModeOutput(LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |                              ^~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:8:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\include/IfxEgtm_Pwm.h:111:5: error: unknown type name 'IfxEgtm_Pwm_FastShutoffConfig'
  111 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\include/IfxEgtm_Pwm.h:126:5: error: unknown type name 'IfxEgtm_Pwm_ToutMap'; did you mean 'IfxEgtm_Tom_ToutMap'?
  126 |     IfxEgtm_Pwm_ToutMap *pin;
      |     ^~~~~~~~~~~~~~~~~~~
      |     IfxEgtm_Tom_ToutMap
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\include/IfxEgtm_Pwm.h:127:5: error: unknown type name 'IfxEgtm_Pwm_ToutMap'; did you mean 'IfxEgtm_Tom_ToutMap'?
  127 |     IfxEgtm_Pwm_ToutMap *complementaryPin;
      |     ^~~~~~~~~~~~~~~~~~~
      |     IfxEgtm_Tom_ToutMap
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_7dl1ocjr\include/IfxEgtm_Pwm.h:233:5: error: unknown type name 'IfxEgtm_Pwm_ToutMap'; did you mean 'IfxEgtm_Tom_ToutMap'?
  233 |     IfxEgtm_Pwm_ToutMap *outputPin;
      |     ^~~~~~~~~~~~~~~~~~~
      |     IfxEgtm_Tom_ToutMap
